# on-record

./: .gitignore  .mcp.json  .npmrc  CLAUDE.md  README.md  package.json  playwright.config.ts  pnpm-lock.yaml  project-context.md
evals/: .env.example  .gitignore  chatbot.py  conftest.py  generate_transcript.sh  mcp_client.py  metrics.py  pyproject.toml  server.py  test_bridge.py
evals/providers/: __init__.py  anthropic_provider.py  base.py  openai_provider.py
evals/synthesis-outputs/01-happy-path-email-casual/: claude-haiku-4-5-20251001-20260326-220250.md  claude-haiku-4-5-20251001-20260326-222323.md  claude-sonnet-4-6-20260326-215705.md  gemini-2.5-flash-20260326-210034.md  gemini-2.5-flash-20260326-210200.md  gemini-2.5-flash-20260326-210619.md  gemini-3-flash-preview-20260326-210241.md  gemini-3-flash-preview-20260326-210727.md  gpt-4.1-mini-20260326-215804.md  gpt-4o-20260326-204728.md  gpt-4o-20260326-205644.md  gpt-4o-mini-20260326-215443.md  gpt-4o-mini-20260326-222435.md
evals/synthesis-outputs/02-happy-path-sms-casual/: claude-haiku-4-5-20251001-20260326-220306.md  claude-sonnet-4-6-20260326-215742.md  (+4 more)
evals/synthesis-prompts/: 01-happy-path-email-casual.md  02-happy-path-sms-casual.md  03-happy-path-email-formal.md  04-zero-result-fallback.md  05-validation-skip-gap.md  06-vague-concern.md  07-ambiguous-confirmation.md  08-multi-search-before-hit.md  09-environment-issue.md  10-healthcare-emotional.md  README.md  _base-instructions.md
evals/tests/: test_chatbot.py  test_manual_cases.py  test_providers.py  test_server_lifecycle.py
(+251 files in other folders)
