[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "on-record-evals"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "deepeval>=3.7.0",
    "anthropic>=0.29.0",
    "httpx>=0.28.0",
    "openai",
    "pydantic>=2.11.7",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
